--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>WedStudio</title>
   </head>
   <body>
-    <heaher>
+    <header>
       <nav>
         <a href="./index.html">WedStudio</a>
         <ul>
           <li>
-            <a href="">Studio</a>
+            <a href="./index.html">Studio</a>
           </li>
           <li>
             <a href="">Portfolio</a>
@@ -24,10 +24,10 @@
           <li>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li><a href="tel:+11000111-11-11">+11 (000) 111-11-11</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
-    </heaher>
+    </header>
     <main>
       <section>
         <h1>Effective Solutions for Your Business</h1>
@@ -36,84 +36,84 @@
       <section>
         <h2>Advantages</h2>
         <ul>
-          <il>
+          <li>
             <h3>Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
-          </il>
-          <il>
+          </li>
+          <li>
             <h3>Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
-          </il>
-          <il
-            ><h3>Diligence</h3>
+          </li>
+          <li>
+            <h3>Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
-          </il>
-          <il>
+          </li>
+          <li>
             <h3>Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
-          </il>
+          </li>
         </ul>
       </section>
       <section>
         <h2>Our Team</h2>
         <ul>
-          <il
-            ><img
-              src="./images/27d7cc162dfead836063691cf04a58cf (1).jpg"
+          <li>
+            <img
+              src="./images/img-min.jpg"
               alt="Product Designer"
               width="264"
               height="260"
             />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
-          </il>
-          <il
-            ><img
-              src="./images/8a9539bd306a71f0180d4ac75766361e (1).jpg"
+          </li>
+          <li>
+            <img
+              src="./images/img1-min.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
             />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
-          </il>
-          <il
-            ><img
-              src="./images/210eea8d1f5ef1a5b4db4f62aba5e8e9 (1).jpg"
-              alt="Camila Garcia"
+          </li>
+          <li>
+            <img
+              src="./images/img2-min.jpg"
+              alt="Camlia Garcia"
               width="264"
               height="260"
             />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
-          </il>
-          <il
-            ><img
-              src="./images/c6daee5d9dff1c4f03f226cbaec0f164 (1).jpg"
-              alt="Daniel Wilson"
+          </li>
+          <li>
+            <img
+              src="./images/img3-min.jpg"
+              alt="Daniel Wlison"
               width="264"
               height="260"
             />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
-          </il>
+          </li>
         </ul>
       </section>
     </main>
     <footer>
-      <div class="logo">WedStudio</div>
+      <a href="./index.html">WedStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
